Fix contrast things

--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -3,6 +3,8 @@
   text-align: center;
   padding: 3vw;
 
+  font-size: max(1.35vw, 18.5px);
+
   ul {
     list-style: none;
     margin: 0;
